Feb2023/AutomateBoringStuff/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
  name: techtalks
  namespace: default
spec:
  rules:
    - host: techtalks.devops-consultant.guru
      http:
        paths:
          - backend:
              service:
                name: podinfo
                port:
                  number: 9898
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - techtalks.devops-consultant.guru
      secretName: techtalks-tls
